--- a/task-definitions/nginx.json
+++ b/task-definitions/nginx.json
@@ -1,16 +1,17 @@
 [
   {
     "name": "nginx",
-    "image": "docker.io/nginx:latest",
+    "image": "545888714756.dkr.ecr.us-east-1.amazonaws.com/nginx:latest",
     "essential": true,
     "portMappings": [
       {
         "containerPort": 80,
+        "hostPort": 80,
         "protocol": "tcp"
       }
     ],
     "memory": 512,
-    "cpu": 512,
+    "cpu": 256,
     "requiresCompatibilities": ["EC2"]
   }
 ]
