--- a/apps/app/Dockerfile
+++ b/apps/app/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx:1.17.1-alpine
 
-COPY ./data.json /usr/share/nginx/html/data.json
+COPY ./v2/data.json /usr/share/nginx/html/v2/data.json
